@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.7 to v2.4.8
+- Fix crash when reloading network savegames (bug #1590350)
 
 Changes from v2.4.6 to v2.4.7
 - Fixed comp_soul and comp_maskedanim options not actually being optional.
